--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -2,13 +2,59 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link href="Content/sticky-footer.css" rel="stylesheet" />
+    <script src="Scripts/mustache.js"></script>
+    <script src="Scripts/TypeScript/Games/Days.js"></script>
+    <script src="Scripts/TypeScript/Games/Letters.js"></script>
+    <script src="Scripts/TypeScript/Games/Months.js"></script>
+    <script src="Scripts/TypeScript/Games/Numbers.js"></script>
+    <script src="Scripts/TypeScript/About.js"></script>
     <script src="Scripts/react/react-0.13.1.min.js"></script>
     <script src="Scripts/TypeScript/mnemonicData.js"></script>
     <script src="Scripts/TypeScript/mnemonic.js"></script>
+    <script src="Scripts/Routing.js"></script>
 </head>
 <body>
-
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="../">Minnesträning</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="../">Startsidan</a></li>
+                    <li><a href="#numbers">Siffror</a></li>
+                    <li><a href="#letters">Bokstäver</a></li>
+                    <li><a href="#days">Veckodagar</a></li>
+                    <li><a href="#months">Månader</a></li>
+                    <li><a href="#about">Om sidan</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+    <!-- Begin page content -->
+    <div class="container">
+        <div class="page-header">
+            <h1>Figurkodsträning</h1>
+        </div>
+        <p class="lead">Figurkodsträning a lá <a href="http://www.themindacademy.se">mindacademy.se</a></p>
+        <main>
+            Let the game begin...
+        </main>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted"><a href="http://creativecommons.org/licenses/by-nc/4.0/"><img src="https://licensebuttons.net/l/by-nc/3.0/88x31.png" alt="CC BY-NC" /></a> 2015 - Made by <a href="https://github.com/OskarKlintrot">Oskar Klintrot</a>. Source code available at <a href="https://github.com/OskarKlintrot/Mnemonic-Images-Training">GitHub.org</a></p>
+        </div>
+    </footer>
 </body>
 </html>
