Number-game fetch data from mnemonicData and displays. Error handling working.

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -4,6 +4,7 @@
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <link href="Content/sticky-footer.css" rel="stylesheet" />
     <script src="Scripts/mustache.js"></script>
     <script src="Scripts/TypeScript/Games/Days.js"></script>
