Countdown and sliding works

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -51,6 +51,8 @@
         <main>
             Let the game begin...
         </main>
+        <br />
+        <p><em>OBS!</em> Sidan är under utveckling och inte på långa vägar färdig än!</p>
     </div>
     <footer class="footer">
         <div class="container">
