--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -33,11 +33,11 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../">Startsidan</a></li>
-                    <li><a href="#numbers">Siffror</a></li>
-                    <li><a href="#letters">Bokstäver</a></li>
-                    <li><a href="#days">Veckodagar</a></li>
-                    <li><a href="#months">Månader</a></li>
-                    <li><a href="#about">Om sidan</a></li>
+                    <li><a href="?#numbers">Siffror</a></li>
+                    <li><a href="?#letters">Bokstäver</a></li>
+                    <li><a href="?#days">Veckodagar</a></li>
+                    <li><a href="?#months">Månader</a></li>
+                    <li><a href="?#about">Om sidan</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -48,7 +48,7 @@
             <h1>Figurkodsträning</h1>
         </div>
         <p class="lead">Figurkodsträning a lá <a href="http://www.themindacademy.se">mindacademy.se</a></p>
-        <main>
+        <main class="clearfix">
             Let the game begin...
         </main>
         <br />
