More responsive design

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <link href="Content/sticky-footer.css" rel="stylesheet" />
+    <link href="Content/Custom.css" rel="stylesheet" />
     <script src="Scripts/mustache.js"></script>
     <script src="Scripts/TypeScript/Games/Days.js"></script>
     <script src="Scripts/TypeScript/Games/Letters.js"></script>
