Refactored the slider and put it into a new class to be inhereted

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -10,6 +10,7 @@
     <link href="Content/sticky-footer.css" rel="stylesheet" />
     <link href="Content/Custom.css" rel="stylesheet" />
     <script src="Scripts/mustache.js"></script>
+    <script src="Scripts/TypeScript/Shared/GameEngine.js"></script>
     <script src="Scripts/TypeScript/Games/Days.js"></script>
     <script src="Scripts/TypeScript/Games/Letters.js"></script>
     <script src="Scripts/TypeScript/Games/Months.js"></script>
