Refactoring and layout

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -56,7 +56,7 @@
             Let the game begin...
         </main>
         <br />
-        <p><em>OBS!</em> Sidan är under utveckling och inte på långa vägar färdig än!</p>
+        <p class="clearfix"><em>OBS!</em> Sidan är under utveckling och inte på långa vägar färdig än!</p>
     </div>
     <footer class="footer">
         <div class="container">
