--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -15,10 +15,9 @@
     <script src="Scripts/TypeScript/Games/Letters.js"></script>
     <script src="Scripts/TypeScript/Games/Months.js"></script>
     <script src="Scripts/TypeScript/Games/Numbers.js"></script>
+    <script src="Scripts/TypeScript/Games/Names.js"></script>
     <script src="Scripts/TypeScript/About.js"></script>
-    <script src="Scripts/react/react-0.13.1.min.js"></script>
     <script src="Scripts/TypeScript/mnemonicData.js"></script>
-    <script src="Scripts/TypeScript/mnemonic.js"></script>
     <script src="Scripts/Routing.js"></script>
 </head>
 <body>
@@ -36,11 +35,12 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="../">Startsidan</a></li>
+                    <!--<li class="active"><a href="../">Startsidan</a></li>-->
                     <li><a href="?#numbers">Siffror</a></li>
                     <li><a href="?#letters">Bokstäver</a></li>
                     <li><a href="?#days">Veckodagar</a></li>
                     <li><a href="?#months">Månader</a></li>
+                    <li><a href="?#names">Namn</a></li>
                     <li><a href="?#about">Om sidan</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
