--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -36,12 +36,12 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <!--<li class="active"><a href="../">Startsidan</a></li>-->
-                    <li><a href="?#numbers">Siffror</a></li>
-                    <li><a href="?#letters">Bokstäver</a></li>
-                    <li><a href="?#days">Veckodagar</a></li>
-                    <li><a href="?#months">Månader</a></li>
-                    <li><a href="?#names">Namn</a></li>
-                    <li><a href="?#about">Om sidan</a></li>
+                    <li><a href="#/numbers">Siffror</a></li>
+                    <li><a href="#/letters">Bokstäver</a></li>
+                    <li><a href="#/days">Veckodagar</a></li>
+                    <li><a href="#/months">Månader</a></li>
+                    <li><a href="#/names">Namn</a></li>
+                    <li><a href="#/about">Om sidan</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -53,14 +53,18 @@
         </div>
         <p class="lead">Figurkodsträning a lá <a href="http://www.themindacademy.se">mindacademy.se</a></p>
         <main class="clearfix">
-            Let the game begin...
+            <p>
+                Här kan du öva på <a href="#/numbers">siffror</a>, <a href="#/letters">bokstäver</a>
+                , <a href="#/days">veckodagar</a>, <a href="#/months">månader</a> och <a href="#/names">namn</a>.
+            </p>
         </main>
         <br />
         <p class="clearfix"><em>OBS!</em> Sidan är under utveckling och inte på långa vägar färdig än!</p>
+        <p class="clearfix">Just nu måste du stoppa pågående omgång för att kunna starta en ny omgång. Vi jobbar på att lösa det!</p>
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted"><a href="http://creativecommons.org/licenses/by-nc/4.0/"><img src="https://licensebuttons.net/l/by-nc/3.0/88x31.png" alt="CC BY-NC" /></a> 2015 - Made by <a href="https://github.com/OskarKlintrot">Oskar Klintrot</a>. Source code available at <a href="https://github.com/OskarKlintrot/Mnemonic-Images-Training">GitHub.org</a></p>
+            <p class="text-muted"><a href="http://creativecommons.org/licenses/by-nc/4.0/"><img src="https://licensebuttons.net/l/by-nc/3.0/88x31.png" alt="CC BY-NC" /></a> 2015 - Skapad av <a href="https://github.com/OskarKlintrot">Oskar Klintrot</a>. Källkoden finns tillgänglig på <a href="https://github.com/OskarKlintrot/Mnemonic-Images-Training">GitHub.org</a></p>
         </div>
     </footer>
 </body>
