--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -51,7 +51,7 @@
         <div class="page-header">
             <h1>Figurkodsträning</h1>
         </div>
-        <p class="lead">Figurkodsträning a lá <a href="http://www.themindacademy.se">mindacademy.se</a></p>
+        <p class="lead">Figurkodsträning a lá <a href="http://www.themindacademy.se">themindacademy.se</a></p>
         <main class="clearfix">
             <p>
                 Här kan du öva på <a href="#/numbers">siffror</a>, <a href="#/letters">bokstäver</a>
@@ -64,7 +64,8 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted"><a href="http://creativecommons.org/licenses/by-nc/4.0/"><img src="https://licensebuttons.net/l/by-nc/3.0/88x31.png" alt="CC BY-NC" /></a> 2015 - Skapad av <a href="https://github.com/OskarKlintrot">Oskar Klintrot</a>. Källkoden finns tillgänglig på <a href="https://github.com/OskarKlintrot/Mnemonic-Images-Training">GitHub.org</a></p>
+            <p class="text-muted"><a href="http://creativecommons.org/licenses/by-nc/4.0/"><img src="https://licensebuttons.net/l/by-nc/3.0/88x31.png" alt="CC BY-NC" /></a> 2015 - Skapad av <a href="https://github.com/OskarKlintrot">Oskar Klintrot</a>. 
+            Källkoden finns tillgänglig på <a href="https://github.com/OskarKlintrot/Mnemonic-Images-Training">GitHub.com</a></p>
         </div>
     </footer>
 </body>
