Added Application Insight Script

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Index.html
@@ -5,10 +5,14 @@
 
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="Scripts/bootstrap.min.js"></script>
     <link href="Content/sticky-footer.css" rel="stylesheet" />
     <link href="Content/Custom.css" rel="stylesheet" />
+
+    <!--Application Insight Script-->
+    <script src="Scripts/ApplicationInsight.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/mustache.js"></script>
     <script src="Scripts/TypeScript/Shared/GameEngine.js"></script>
     <script src="Scripts/TypeScript/Games/Days.js"></script>
